1998-06-15	Uwe Ohse  <uwe@ohse.de>

	* src/rbsb.c (io_mode), case 1:
	  disable IEXTEN, from Usman Muzaffar <usman@thynne.psych.nwu.edu>.

1998-06-15	Uwe Ohse  <uwe@ohse.de>

	* src/lsz.c: Transfering 0 byte files with Zmodem made lsz crash.

1998-06-03	Uwe Ohse  <uwe@ohse.de>

	* update to automake-1.4, autoconf-2.13.
	
	* configure.in:
	- version number set to 0.12.21
	- Threw out explicit AC_LINK_FILES statement in configure.in.

1998-03-21 Uwe Ohse	<uwe@ohse.de>
	* configure.in, aclocal.m4: check for socklen_t.
	* check.lrzsz: threw out tcp inband checks.
	* src/lrz.c: threw out tcp inband stuff (--tcp). The only
	  user doesn't need it anymore.
	  changed static SEGMENTS buffer to dynamic allocation.
	  make some global variables static.
	* src/lsz.c: threw out tcp inband stuff (--tcp). The only
	  user doesn't need it anymore.
	  allocate receive-buffer dynamically.
	* src/tcp.c: change a size_t to socklen_t.
	* zm.c: prototype for zsendline_s.

1998-02-06	Uwe Ohse  <uwe@ohse.de>

	* debian/*
	* Makefile.am:
	* configure.in:
	  removed support for debian, on mail from
	  Josip Rodin <joy@cibalia.gkvk.hr>.

1998-12-29	Uwe Ohse  <uwe@ohse.de>

	* src/lrz.c: removed stpcpy call.
	  got rid of warnings on solaris (isXXXXX treating
	  arguments as signed, size_t is not of "long" size).

	* src/lsz.c: removed stpcpy calls.
	  got rid of warnings on solaris (isXXXXX treating
	  arguments as signed, size_t is not of "long" size).
	  (wcs): has another argument "filename on remote
	  site". 
	  (wcsend): if no timezone variable was found the printf was
	  called with to few arguments for the format.
	  (send_pseudo): removed major/minor security problem (major,
	  though nobody used that code, so it in fact was minor),
	  stupid usage of /tmp.
	  damned, i thought i had done that _long_ ago?

	* src/lsyslog.c (lsyslog): special code for varargs.

	* src/zm.c: threw out prototype for zsendline_s().

	* src/rbsb.c: moved getspeed() and speeds table
	  upwards.
